--- a/INDEX2.HTML
+++ b/INDEX2.HTML
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VALIDADOR DE FORMULÁRIO</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <div class="screen">
@@ -13,22 +13,23 @@
 <img src="bull.jpg" alt="">
         </div>
         <div class="rightside">
-    <h1>crie Uma Conta</h1>
-        <form method="post" action="cadastro.php" class="b7validator">
+    <h1>Crie uma conta</h1>
+    
+        <form method="POST" action="cadastro.php" class="b7validator">
            <label>
                Seu nome: <br>
-               <input type="text" name="name" data-rules="required">
+               <input type="text" name="name" data-rules="required|min=2"/>
            </label> 
            <label>
                Seu email: <br>
-               <input type="text" name="email">
+               <input type="text" name="email" data-rules="required|email"/>
            </label>
            <label>
             Sua senha: <br>
-            <input type="password" name="password">
+            <input type="password" name="password" data-rules="required|min=4"/>
         </label>
         <label>
-            <input type="submit" name="Cadastrar" value="Cadastrar">
+            <input type="submit" value="Cadastrar"/>
         </label>
         </form>
         <div>
@@ -36,6 +37,6 @@
         </div>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
